# singapore-job-agent

./: .env.example  .gitignore  profile.yaml  pyproject.toml
.github/workflows/: daily-digest.yml
src/: config.py  emailer.py  filter.py  main.py  models.py  ranker.py
src/sources/: base.py  mycareersfuture.py  rss.py
src/templates/: digest.html.j2
